# news-ycombinator-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/hn_mcp/: app.py  client.py  server.py  types.py
src/hn_mcp/tools/: __init__.py  get_comment_tree.py  get_stories.py  get_thread.py  get_user.py  search_comments.py  search_stories.py
tests/: conftest.py  test_app.py  test_client.py
tests/cassettes/client/: get_item_comment.yaml  get_item_story.yaml  get_user.yaml  search.yaml  search_by_date.yaml
tests/cassettes/tools/: get_comment_tree_depth0.yaml  get_comment_tree_depth1.yaml  get_comment_tree_full.yaml  get_stories_ask.yaml  get_stories_new.yaml  get_stories_show.yaml  get_stories_top.yaml  get_thread_depth0.yaml  get_thread_depth1.yaml  get_thread_full.yaml  get_user.yaml  search_comments_author_filter.yaml  search_comments_basic.yaml  search_comments_date.yaml  search_comments_story_filter.yaml  search_stories_date.yaml  search_stories_relevance.yaml
tests/tools/: test_get_comment_tree.py  test_get_stories.py  test_get_thread.py  test_get_user.py  test_search_comments.py  test_search_stories.py
